--- a/src/main/webapp/static/uml-editor/css/uml-type.css
+++ b/src/main/webapp/static/uml-editor/css/uml-type.css
@@ -4,22 +4,22 @@
 }
 
 .uml-type-class {
-    background: #f9f9f9;
+    background: #fcfcfc;
     border: 2px solid #616161;
 }
 
 .uml-type-class-selected {
-    background:#f9f9f9;
+    background:#fcfcfc;
     border: 2px solid blue;
 }
 
 .uml-type-interface {
-    background: #f9f9f9;
+    background: #fcfcfc;
     border: 2px solid #616161;
 }
 
 .uml-type-interface-selected {
-    background:#f9f9f9;
+    background:#fcfcfc;
     border: 2px solid blue;
 }
 
