--- a/src/main/webapp/static/uml-editor/css/style.css
+++ b/src/main/webapp/static/uml-editor/css/style.css
@@ -86,3 +86,29 @@ body, html{
     position: absolute;
 
 }
+
+.context-menu {
+    background: #514848;
+    border: 1px solid grey;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    z-index: 16777270; /* Limit of safari 3 */
+    position: absolute;
+    border-radius: 2px;
+}
+
+.context-menu-item {
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    font-size: 12px;
+    color: white;
+    -webkit-user-select: none;  
+    -moz-user-select: none;    
+    -ms-user-select: none;      
+    user-select: none;
+}
+
+.context-menu-item:hover {
+    background: #337ab7;
+}
