--- a/src/main/webapp/static/uml-editor/css/uml-type.css
+++ b/src/main/webapp/static/uml-editor/css/uml-type.css
@@ -10,7 +10,7 @@
 
 .uml-type-class-selected {
     background:#fcfcfc;
-    border: 2px solid blue;
+    border: 2px solid #2979FF;
 }
 
 .uml-type-interface {
@@ -20,7 +20,7 @@
 
 .uml-type-interface-selected {
     background:#fcfcfc;
-    border: 2px solid blue;
+    border: 2px solid #2979FF;
 }
 
 .uml-type-header {
