--- a/src/main/webapp/static/uml-result/css/uml-result.css
+++ b/src/main/webapp/static/uml-result/css/uml-result.css
@@ -3,9 +3,8 @@ ul.umlResultListing {
     border: 1px solid #ccc;
     background-color: #f5f5f5;
     color: #333;
-    padding: 10px;
-    padding-left: 20px;
-    margin: 5px;
+    padding: 10px 10px 10px 20px;
+    margin: 0;
     list-style-position: inside;
 }
 
@@ -27,7 +26,7 @@ ul.umlResultListing {
 }
 
 .umlResultSectionTitle {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-size: 16px;
 }
 
