--- a/src/main/webapp/static/uml-result/css/uml-result.css
+++ b/src/main/webapp/static/uml-result/css/uml-result.css
@@ -15,6 +15,7 @@ ul.umlResultListing {
     font-family: Courier, serif;
     font-size: 14px;
     line-height: 1.42857;
+    word-wrap: break-word;
 }
 
 
