--- a/src/main/webapp/content/css/vendor.css
+++ b/src/main/webapp/content/css/vendor.css
@@ -2867,8 +2867,8 @@ fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4; }
+  background-color: #00ff00;
+  border-color: #00ff00; }
   .btn-primary:focus, .btn-primary.focus {
     color: #fff;
     background-color: #286090;
